--- a/style.css
+++ b/style.css
@@ -58,11 +58,10 @@ header{
 
 .layout__btn:hover{
     cursor: pointer;
-    border: 2px solid #00AFDB;
+    box-shadow: inset 0 0 0 2px #00AFDB;
     background: white;
     color: #00AFDB;
 }
-
 
 /*------------------COMMON------------------ */
 
@@ -96,12 +95,13 @@ header{
 }
 .menu__item:hover{
     opacity: 1;
-    border-bottom: 1px solid #fff;
+    box-shadow: 0 1px  #fff;
+    cursor: pointer;
 }
 .menu__item_active{
     cursor: pointer;
     opacity: 1;
-    border-bottom: 1px solid #fff;
+    box-shadow: 0 1px  #fff;
 }
 
 .your-life-inner{
@@ -228,12 +228,39 @@ header{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-right: 269px;
+    margin-right: 500px;
+    color: #373737;
+}
+.nav-items-inner{
+    width: 100px;
+    height: 20px;
+}
+.nav-items-inner .slash{
+    margin: 0 7px 0 4px;
+}
+.arrow-left{
+    margin-right: 9px;
+    transition: .4s ease-in-out;
+}
+.arrow-right {
+    margin-left: 7px;
+    transition: .4s ease-in-out;
+}
+.arrow-right:hover {
+    cursor: pointer;
+    transform: translate( 5px, 0) scale(1.3);
+}
+.arrow-left:hover{
+    cursor: pointer;
+    transform: translate( -5px, 0) scale(1.3);
+}
+.nav-items-inner .number , .slash{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 140%;
 }
 
-.nav-items-inner{
-    justify-self: end;
-}
 
 .ourcommunity-content{
     margin-top: 20px;
@@ -252,7 +279,7 @@ header{
 }
 
 .ourcommunity-description__title{
-    margin-top: 20px;
+    margin-top: 17px;
     width: 160px;
     height: 20px;
     font-style: normal;
@@ -270,7 +297,7 @@ header{
     width: 298px;
     height: 80px;
     font-size: 14px;
-    line-height: 140%;
+    line-height: 147%;
     text-align: center;
     color: #4E4E4E;
 }
@@ -388,7 +415,14 @@ header{
 }
 .subscribe__form_btn img{
     width: 19px;
-    height: 16.52px;
+    height: 17px;
+    transition: .45s ease-in-out;
+}
+.subscribe__form_btn:hover{
+    cursor: pointer;
+}
+.subscribe__form_btn:hover img{
+    transform: rotate(2turn);
 }
 
 /* Download */
@@ -428,6 +462,7 @@ header{
     line-height: 150%;
     color: #4E4E4E;
     text-align: center;
+    transition: .3s ease-in-out;
 }
 
 .download__buttons{
@@ -446,6 +481,7 @@ header{
     align-items: center;
     justify-content: center;
     border: none;
+    transition: .3s ease-in-out;
 }
 
 .download__btn_text{
@@ -456,14 +492,18 @@ header{
     justify-content: center;
     background: #00AFDB;
     border-radius: 0;
+    transition: .3s ease-in-out;
 }
 .download__btn_text p{
     font-style: normal;
     font-weight: bold;
+    width: 100px;
+    height: 16px;
     font-size: 14px;
     line-height: 16px;
     text-transform: uppercase;
     color: #FFFFFF;
+    transition: .3s ease-in-out;
 }
 .download__btn_icon{
     width: 60px;
@@ -473,9 +513,27 @@ header{
     justify-content: center;
     background: #009CC2;
     border-radius: 0;
+    transition: .3s ease-in-out;
 }
 
-/* footer */
+.download__btn:hover{
+    cursor: pointer;
+    box-shadow: 0 0 0 2px #00AFDB;
+}
+.download__btn:hover .download__btn_text{
+    background: white;
+}
+.download__btn:hover .download__btn_text p {
+    color: #00AFDB;
+}
+.download__btn:hover .download__btn_icon{
+    background: #d3cece;
+}
+.download__btn:hover .download__btn_icon img{
+    color:#009CC2;
+}
+
+    /* footer */
 
 footer{
     background: #000;
@@ -504,6 +562,12 @@ footer{
     font-size: 14px;
     line-height: 140%;
     opacity: 0.98;
+    transition: .3s ease-in-out;
+}
+.footer-inner__menu_item:hover{
+    cursor: pointer;
+    color: #00AFDB;
+    text-decoration: underline;
 }
 
 .footer-inner__menu_item::after{
