--- a/covid-dashboard/src/App.module.scss
+++ b/covid-dashboard/src/App.module.scss
@@ -4,35 +4,43 @@ body{
   background: $colorBg;
 }
 .App{
-  width: 100%;
+  margin: 0 auto;
+  width: 97vw;
   min-height: 100vh;
   padding: 0 20px;
-
 }
+
 .mainContainer{
   @include flexRow();
   width: 100%;
+  height: calc(91vh - 20px);
 }
 .appPanelLeft{
   @include flexCenter(column);
   width: 20%;
+  height: calc(100% - 20px);
 }
 
 .mapContainer{
   @include flexCenter(column);
-  width: 50%;
+  width: calc(50% - 80px);
   margin: 0 40px;
+  height: calc(100% - 20px);
 }
 
 .appPanelRight{
-  @include flexCenter(column);
-  width: 20%;
+  @include flexCustom(column, space-around);
+  width: 30%;
+  height: calc(100% - 20px);
   &__top{
     @include flexCenter(row);
     width: 100%;
+    height: calc(50vh - 40px);
   }
   &__bot{
     @include flexCenter(row);
+    width: 100%;
+    height: calc(40vh - 40px);
   }
 }
 
