--- a/covid-dashboard/src/components/Recovered/Recovered.module.scss
+++ b/covid-dashboard/src/components/Recovered/Recovered.module.scss
@@ -2,6 +2,9 @@
 
 .recovered{
   @include blockStyling();
+  width: 100%;
+  height: 100%;
+  margin-left: 20px;
   &__title{
     @include flexCenter(column);
     &_top{
