--- a/covid-dashboard/src/components/PerCountryCases/PerCountryCases.module.scss
+++ b/covid-dashboard/src/components/PerCountryCases/PerCountryCases.module.scss
@@ -1,7 +1,7 @@
 @import "../../common";
 
 .cases{
-  @include flexCustom(column, start);
+  @include flexCustom(column, flex-start);
   @include blockStyling();
   width: 100%;
   height: calc(100% - 20vh - 40px );
@@ -13,10 +13,12 @@
     @include flexCenter(column);
     width: 100%;
     &_item{
-      margin-bottom: 20px;
-      border-bottom: 1px solid $colorUnderline;
+      padding: 10px;
+      margin: 5px 10px;
+      border-radius: 20px;
       width: 100%;
-      text-align: center;
+      text-align: start;
+      @include hoverElement();
       &_injured{
         @include fontInjured(18px);
         margin-right: 20px;
