--- a/covid-dashboard/src/components/PerCountryCases/PerCountryCases.module.scss
+++ b/covid-dashboard/src/components/PerCountryCases/PerCountryCases.module.scss
@@ -23,9 +23,13 @@
         @include fontInjured(18px);
         margin-right: 20px;
       }
-      &__country{
+      &_country{
         @include fontLight(18px);
       }
     }
+    &_active{
+      color: white;
+    }
   }
 }
+
