--- a/covid-dashboard/src/components/Header/Header.module.scss
+++ b/covid-dashboard/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   border-radius: 20px;
   height: 9vh;
   text-align: center;
-  @include flexCenter(row);
+  @include flexCustom(row, space-around, center);
   &Text{
     @include fontLight(26px);
   }
