--- a/covid-dashboard/src/components/GlobalCases/GlobalCases.module.scss
+++ b/covid-dashboard/src/components/GlobalCases/GlobalCases.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   margin-bottom: 20px;
   height: 20vh;
+  transition: 0.5s ease-in-out;
   &__text{
     @include fontLight(18px)
   }
