--- a/covid-dashboard/src/common/common.scss
+++ b/covid-dashboard/src/common/common.scss
@@ -6,6 +6,7 @@ $colorTinyText : #5E6973;
 $colorInjured : #8e3f56;
 $colorRecovered : #0e5e2a;
 $colorUnderline : #6ABEA7;
+$colorMenu: #73dfb6;
 
 @mixin fontLight($size) {
   font-family: 'Nunito', sans-serif;
@@ -61,6 +62,20 @@ $colorUnderline : #6ABEA7;
   background-color: $colorBlock;
   border-radius: 20px;
   position: relative;
+}
+
+@mixin btnStyling($borderRadius) {
+  background: none;
+  outline: none;
+  border: none;
+  transition: 0.3s ease-in-out;
+  border-radius: $borderRadius;
+  @include flexCenter(row);
+  &:hover{
+    cursor: pointer;
+    border: none;
+    background-color: $colorUnderline;
+  }
 }
 
 @mixin stretchBtn() {
