--- a/covid-dashboard/src/App.module.scss
+++ b/covid-dashboard/src/App.module.scss
@@ -15,6 +15,7 @@ body{
   width: 100%;
   height: calc(91vh - 20px);
   position: relative;
+  flex-wrap: wrap;
 }
 .appPanelLeft{
   @include flexCenter(column);
@@ -45,3 +46,26 @@ body{
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .appPanelRight{
+    width: 100%;
+  }
+  .appPanelLeft{
+    flex: 2;
+  }
+  .mapContainer{
+    flex: 4;
+  }
+}
+@media screen and (max-width: 768px) {
+  .appPanelRight{
+    width: 100%;
+  }
+  .appPanelLeft{
+    flex: 2;
+  }
+  .mapContainer{
+    width: 100%;
+    flex: auto;
+  }
+}
