--- a/covid-dashboard/src/components/Map/MapCountryInfo/MapCountryInfo.scss
+++ b/covid-dashboard/src/components/Map/MapCountryInfo/MapCountryInfo.scss
@@ -1,9 +1,25 @@
 @import '../../../common/common';
 
 .mapCountryInfo{
+  position: relative;
   width: 10px;
   height: 10px;
   background-color: $colorInjured;
   border-radius: 50%;
   z-index: 20;
+  &__button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    background: none;
+    border: 1px solid black;
+    &:hover{
+      cursor: pointer;
+    }
+    img{
+      width: 10px;
+      height: 10px;
+    }
+  }
 }
