--- a/covid-dashboard/src/components/Diagram/Diagram.module.scss
+++ b/covid-dashboard/src/components/Diagram/Diagram.module.scss
@@ -1,6 +1,6 @@
 @import "../../common/common";
 
-.diagram{
+.diagramContainer{
   @include blockStyling();
   width: 100%;
   height: calc(100% - 40px) ;
