--- a/covid-dashboard/src/components/Map/MapCountryInfo/MapCountryInfo.scss
+++ b/covid-dashboard/src/components/Map/MapCountryInfo/MapCountryInfo.scss
@@ -7,19 +7,8 @@
   background-color: $colorInjured;
   border-radius: 50%;
   z-index: 20;
-  &__button{
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 50%;
-    background: none;
-    border: 1px solid black;
-    &:hover{
-      cursor: pointer;
-    }
-    img{
-      width: 10px;
-      height: 10px;
-    }
+  transition: 1s ease-in-out;
+  &:hover{
+    cursor: pointer;
   }
 }
