feat: corrected data display of chart

--- a/covid-dashboard/src/components/Diagram/Diagram.module.scss
+++ b/covid-dashboard/src/components/Diagram/Diagram.module.scss
@@ -2,6 +2,15 @@
 
 .diagramContainer{
   @include blockStyling();
+  @include flexCustom(column, center);
   width: 100%;
   height: calc(100% - 40px) ;
+  &__controls{
+    @include flexCustom(row, center);
+    flex: 1;
+  }
+  &__graph{
+    width: 100%;
+    height: 100%;
+  }
 }
