--- a/covid-dashboard/src/components/Diagram/Diagram.module.scss
+++ b/covid-dashboard/src/components/Diagram/Diagram.module.scss
@@ -6,8 +6,15 @@
   width: 100%;
   height: calc(100% - 40px) ;
   &__controls{
-    @include flexCustom(row, center);
+    width: 100%;
+    @include flexCustom(row, space-around, center);
     flex: 1;
+    margin-top: 10px;
+    &__item{
+      &_select{
+
+      }
+    }
   }
   &__graph{
     width: 100%;
