fix: corrected component work with zeros of some stat values

--- a/covid-dashboard/src/common/common.scss
+++ b/covid-dashboard/src/common/common.scss
@@ -99,4 +99,12 @@ $colorMenu: #73dfb6;
   }
 }
 
+@mixin selectElement() {
+  @include fontLight(18px);
+  background: #9ffff5;
+  transition: .4s ease-in-out;
+  &:hover{
+    cursor: pointer;
+  }
+}
 
