--- a/covid-dashboard/src/components/GlobalLosses/GlobalLosses.module.scss
+++ b/covid-dashboard/src/components/GlobalLosses/GlobalLosses.module.scss
@@ -4,7 +4,7 @@
   @include blockStyling();
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   &__stat{
     margin-top: 10px;
     margin-left: 10px;
