--- a/covid-dashboard/src/components/Recovered/Recovered.module.scss
+++ b/covid-dashboard/src/components/Recovered/Recovered.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   margin-left: 20px;
-  overflow: scroll;
+  overflow-y: scroll;
   &__title{
     margin-top: 10px;
     @include flexCenter(column);
