--- a/covid-dashboard/src/components/GlobalLosses/GlobalLosses.module.scss
+++ b/covid-dashboard/src/components/GlobalLosses/GlobalLosses.module.scss
@@ -26,6 +26,9 @@
       &_name{
         @include fontLight(18px);
         margin-right: 20px;
+        &_flag{
+          @include flag();
+        }
       }
       &_number{
         @include fontInjured(18px);
@@ -43,3 +46,4 @@
     }
   }
 }
+
