--- a/covid-dashboard/src/components/Recovered/Recovered.module.scss
+++ b/covid-dashboard/src/components/Recovered/Recovered.module.scss
@@ -33,8 +33,11 @@
       &_recovered{
         @include fontRecovered(18px);
       }
-      &_city{
+      &_country{
         @include fontLight(18px);
+        &_flag{
+          @include flag();
+        }
       }
       &_selected{
         width: 90%;
