--- a/covid-dashboard/src/components/Header/Header.module.scss
+++ b/covid-dashboard/src/components/Header/Header.module.scss
@@ -11,5 +11,22 @@
     @include fontLight(26px);
   }
 
+  &__credits{
+    @include flexCenter(row);
+    &_author{
+      img{
+        width: 50px;
+        height: 50px;
+      }
+    }
+    &_school{
+      img{
+        width: 80px;
+        height: 80px;
+      }
+      margin-left: 20px;
+    }
+
+  }
   margin-bottom: 20px;
 }
