feat: moved stretch button in common

--- a/covid-dashboard/src/components/GlobalCases/GlobalCases.module.scss
+++ b/covid-dashboard/src/components/GlobalCases/GlobalCases.module.scss
@@ -32,7 +32,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: calc(100vh - 120px);
   z-index: 100;
   .GlobalCases__text{
     @include fontLight(32px);
