--- a/covid-dashboard/src/components/Map/Map.module.scss
+++ b/covid-dashboard/src/components/Map/Map.module.scss
@@ -4,13 +4,14 @@
   @include blockStyling();
   width: 100%;
   height: 100%;
+  overflow: hidden;
   &__controls{
     @include fontLight(18px);
     margin: 10px;
   }
   &__container{
     width: 100%;
-    height: 95%;
+    height: calc(100% - 48px);
     &__main{
 
     }
