--- a/covid-dashboard/src/components/Header/Menu/Menu.module.scss
+++ b/covid-dashboard/src/components/Header/Menu/Menu.module.scss
@@ -22,6 +22,9 @@
       border-bottom: 1px solid $colorUnderline;
       width: 100%;
       margin-top: 5px;
+      &__select{
+        @include selectElement();
+      }
     }
   }
 }
