--- a/covid-dashboard/src/components/Header/Menu/Menu.module.scss
+++ b/covid-dashboard/src/components/Header/Menu/Menu.module.scss
@@ -1,5 +1,6 @@
 @import "../../../common/common";
 .menu{
+  @include flexCustom(row, space-around);
   &__btn{
     @include btnStyling(10px);
     &_img{
@@ -9,17 +10,27 @@
     position: relative;
   }
   &__items{
-    position: absolute;
     right: 30px;
-    width: 320px;
-    @include flexCustom(column, center, center);
-    z-index: 200;
-    background-color: $colorMenu;
+    width: 100%;
+    @include flexCustom(row, space-around, center);
     transition: 0.3s ease;
+    &_link{
+      @include fontLight(18px);
+      margin-left: 20px;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      transition: 0.4s ease-in-out;
+      &:hover{
+        @include fontLight(18px);
+        cursor: pointer;
+        background: #2FDB74;
+        color: #e4fbff;
+      }
+    }
     &_item{
       @include flexCustom(row, center, center);
       @include fontLight(18px);
-      border-bottom: 1px solid $colorUnderline;
       width: 100%;
       margin-top: 5px;
       &__select{
