--- a/covid-dashboard/src/components/Vaccine/Vaccine.module.scss
+++ b/covid-dashboard/src/components/Vaccine/Vaccine.module.scss
@@ -11,7 +11,6 @@
   }
 }
 .tcontainer{
-  position: relative;
   overflow-y: scroll;
   height: calc(91vh - 20px - 44px);
 }
@@ -46,5 +45,28 @@
       }
     }
   }
+}
 
+.modal{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90%;
+  margin: 0 auto;
+  padding: 20px;
+  max-height: 600px;
+  background: #73dfb6;
+  border-radius: 20px;
+  @include fontLight(14px);
+  overflow-y: scroll;
+  z-index: 20;
+  &__button{
+    @include btnStyling(50%);
+    position: absolute;
+    top: 5px;
+    right: 0;
+    img{
+      width: 20px;
+    }
+  }
 }
