--- a/covid-dashboard/src/components/Header/Search/Search.module.scss
+++ b/covid-dashboard/src/components/Header/Search/Search.module.scss
@@ -5,6 +5,7 @@
   justify-self: flex-end;
   position: relative;
   transition: 0.3s ease-in-out;
+  margin-left: 10px;
   &__input{
     padding: 5px 10px;
     border: 1px solid $colorUnderline;
